gccida/g2/combine_simplify_rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4059:35: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  combine_simplify_rtx( rtx x, machine_mode op0_mode, int last, int in_dest) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4063:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4065:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v9; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4072:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4075:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v19; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4080:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v25; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4087:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v32; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4091:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v36; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4092:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v37; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4110:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v55; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4111:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v56; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4116:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v61; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4117:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v62; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4127:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v72; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4140:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v85; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4182:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v127; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4188:4: error: expected ';' after expression
rtx v133; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4188:5: error: use of undeclared identifier 'v133'
rtx v133; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/combine.c:4189:4: error: expected ';' after expression
rtx v134; // r13 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_simplify_rtx/src/obj/combine.o] Error 1
